cabal-version: >=1.10
name: AoC2019
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: fil.krawczyk@gmail.com
author: krawieck
synopsis: Advent of code done in Haskell!
category: Fun
build-type: Simple
extra-source-files:
    ChangeLog.md

executable AoC2019
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <4.12,
        split -any,
        flow -any
